# pixapprox

./: .gitignore  Cargo.toml  LICENSE  README.md  make_video.bat
result/: output.md
src/: eval.rs  expr.rs  main.rs  mutate.rs  myimage.rs  optimize.rs  pixapprox.rs  population.rs  stack.rs  state.rs
