[package]
name = "pixapprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
image = "0.24.5"
png = "0.17.7"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.6.1"
smallvec = "*"
